SUBDIRS = \
	doc \
	src

EXTRA_DIST= \
	autogen.sh \
	rak/address_info.h \
	rak/algorithm.h \
	rak/error_number.h \
	rak/file_stat.h \
	rak/fs_stat.h \
	rak/functional.h \
	rak/functional_fun.h \
	rak/path.h \
	rak/partial_queue.h \
	rak/priority_queue.h \
	rak/priority_queue_default.h \
	rak/regex.h \
	rak/socket_address.h \
	rak/string_manip.h \
	rak/timer.h \
	rak/unordered_vector.h \
	scripts/checks.m4 \
	scripts/common.m4 \
	scripts/attributes.m4

ACLOCAL_AMFLAGS = -I scripts
