SUBDIRS = \
	doc \
	src \
	test

EXTRA_DIST= \
	rtorrent.lua \
	rak/address_info.h \
	rak/algorithm.h \
	rak/error_number.h \
	rak/file_stat.h \
	rak/path.h \
	rak/partial_queue.h \
	rak/regex.h \
	rak/socket_address.h \
	rak/string_manip.h \
	rak/unordered_vector.h \
	scripts/checks.m4 \
	scripts/common.m4 \
	scripts/attributes.m4

ACLOCAL_AMFLAGS = -I scripts
