SUBDIRS = \
	doc \
	src \
	test

nobase_dist_pkgdata_DATA = \
	lua/rtorrent.lua

EXTRA_DIST= \
	rak/address_info.h \
	rak/algorithm.h \
	rak/error_number.h \
	rak/file_stat.h \
	rak/path.h \
	rak/partial_queue.h \
	rak/regex.h \
	rak/string_manip.h \
	rak/unordered_vector.h \
	scripts/checks.m4 \
	scripts/common.m4 \
	scripts/attributes.m4

ACLOCAL_AMFLAGS = -I scripts
