noinst_LIBRARIES = libsub_core.a

libsub_core_a_SOURCES = \
	curl_get.cc \
	curl_get.h \
	curl_stack.cc \
	curl_stack.h \
	download.cc \
	download.h \
	download_list.cc \
	download_list.h \
	download_slot_map.h \
	download_store.cc \
	download_store.h \
	hash_queue.cc \
	hash_queue.h \
	http_queue.cc \
	http_queue.h \
	log.cc \
	log.h \
	manager.cc \
	manager.h \
	poll.cc \
	poll.h


INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
