noinst_LIBRARIES = libsub_core.a

libsub_core_a_SOURCES = \
	curl_get.cc \
	curl_get.h \
	curl_stack.cc \
	curl_stack.h \
	download.cc \
	download.h \
	download_factory.cc \
	download_factory.h \
	download_list.cc \
	download_list.h \
	download_slot_map.h \
	download_store.cc \
	download_store.h \
	http_queue.cc \
	http_queue.h \
	log.cc \
	log.h \
	manager.cc \
	manager.h \
	poll_manager.cc \
	poll_manager.h \
	poll_manager_epoll.cc \
	poll_manager_epoll.h \
	poll_manager_select.cc \
	poll_manager_select.h \
	scheduler.cc \
	scheduler.h \
	view.cc \
	view.h \
	view_manager.cc \
	view_manager.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
