noinst_LIBRARIES = libsub_core.a

libsub_core_a_SOURCES = \
	curl_get.cc \
	curl_get.h \
	curl_socket.cc \
	curl_socket.h \
	curl_stack.cc \
	curl_stack.h \
	dht_manager.cc \
	dht_manager.h \
	download.cc \
	download.h \
	download_factory.cc \
	download_factory.h \
	download_list.cc \
	download_list.h \
	download_slot_map.h \
	download_store.cc \
	download_store.h \
	http_queue.cc \
	http_queue.h \
	manager.cc \
	manager.h \
	poll_manager.cc \
	poll_manager.h \
	range_map.h \
	view.cc \
	view.h \
	view_manager.cc \
	view_manager.h

AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
