noinst_LIBRARIES = libsub_display.a

libsub_display_a_SOURCES = \
	canvas.cc \
	canvas.h \
	manager.cc \
	manager.h \
	window.cc \
	window.h \
	window_download_list.cc \
	window_download_list.h \
	window_peer_info.cc \
	window_peer_info.h \
	window_peer_list.cc \
	window_peer_list.h \
	window_statusbar.cc \
	window_statusbar.h \
	window_title.cc \
	window_title.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
