noinst_LIBRARIES = libsub_display.a

libsub_display_a_SOURCES = \
	canvas.cc \
	canvas.h \
	manager.cc \
	manager.h \
	utils.cc \
	utils.h \
	window.cc \
	window.h \
	window_download_list.cc \
	window_download_list.h \
	window_download_statusbar.cc \
	window_download_statusbar.h \
	window_file_list.cc \
	window_file_list.h \
	window_http_queue.cc \
	window_http_queue.h \
	window_input.cc \
	window_input.h \
	window_log.cc \
	window_log.h \
	window_log_complete.cc \
	window_log_complete.h \
	window_peer_info.cc \
	window_peer_info.h \
	window_peer_list.cc \
	window_peer_list.h \
	window_statusbar.cc \
	window_statusbar.h \
	window_title.cc \
	window_title.h \
	window_tracker_list.cc \
	window_tracker_list.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
