noinst_LIBRARIES = libsub_display.a

libsub_display_a_SOURCES = \
	attributes.h \
	canvas.cc \
	canvas.h \
	frame.cc \
	frame.h \
	manager.cc \
	manager.h \
	utils.cc \
	utils.h \
	text_element.h \
	text_element_list.cc \
	text_element_list.h \
	text_element_string.cc \
	text_element_string.h \
	text_element_value.cc \
	text_element_value.h \
	window.cc \
	window.h \
	window_download_chunks_seen.cc \
	window_download_chunks_seen.h \
	window_download_list.cc \
	window_download_list.h \
	window_download_statusbar.cc \
	window_download_statusbar.h \
	window_download_transfer_list.cc \
	window_download_transfer_list.h \
	window_file_list.cc \
	window_file_list.h \
	window_http_queue.cc \
	window_http_queue.h \
	window_input.cc \
	window_input.h \
	window_log.cc \
	window_log.h \
	window_log_complete.cc \
	window_log_complete.h \
	window_peer_list.cc \
	window_peer_list.h \
	window_statusbar.cc \
	window_statusbar.h \
	window_string_list.cc \
	window_string_list.h \
	window_text.cc \
	window_text.h \
	window_title.cc \
	window_title.h \
	window_tracker_list.cc \
	window_tracker_list.h

AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
