noinst_LIBRARIES = libsub_rpc.a

libsub_rpc_a_SOURCES = \
	command.h \
	command_download_slot.cc \
	command_download_slot.h \
	command_file_slot.cc \
	command_file_slot.h \
	command_map.cc \
	command_map.h \
	command_scheduler.cc \
	command_scheduler.h \
	command_scheduler_item.cc \
	command_scheduler_item.h \
	command_slot.cc \
	command_slot.h \
	command_variable.cc \
	command_variable.h \
	exec_file.cc \
	exec_file.h \
	parse.cc \
	parse.h \
	parse_commands.cc \
	parse_commands.h \
	scgi.cc \
	scgi.h \
	scgi_task.cc \
	scgi_task.h \
	xmlrpc.h \
	xmlrpc.cc

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
