noinst_LIBRARIES = libsub_rpc.a

libsub_rpc_a_SOURCES = \
	command.h \
	command_impl.h \
	command_function.cc \
	command_function.h \
	command_map.cc \
	command_map.h \
	command_scheduler.cc \
	command_scheduler.h \
	command_scheduler_item.cc \
	command_scheduler_item.h \
	command_new_slot.cc \
	command_new_slot.h \
	command_variable.cc \
	command_variable.h \
	command_new_slot.cc \
	command_new_slot.h \
	exec_file.cc \
	exec_file.h \
	object_storage.cc \
	object_storage.h \
	parse.cc \
	parse.h \
	parse_commands.cc \
	parse_commands.h \
	scgi.cc \
	scgi.h \
	scgi_task.cc \
	scgi_task.h \
	xmlrpc.h \
	xmlrpc.cc

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
