noinst_LIBRARIES = libsub_rpc.a

libsub_rpc_a_SOURCES = \
	command.h \
	command.cc \
	command_impl.h \
	command_map.cc \
	command_map.h \
	command_scheduler.cc \
	command_scheduler.h \
	command_scheduler_item.cc \
	command_scheduler_item.h \
	exec_file.cc \
	exec_file.h \
	fixed_key.h \
	ip_table_list.h \
	object_storage.cc \
	object_storage.h \
	parse.cc \
	parse.h \
	parse_commands.cc \
	parse_commands.h \
	scgi.cc \
	scgi.h \
	scgi_task.cc \
	scgi_task.h \
	xmlrpc.h \
	xmlrpc.cc

AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
