noinst_LIBRARIES = libsub_ui.a

libsub_ui_a_SOURCES = \
	base_element.h \
	control.h \
	download.cc \
	download.h \
	download_list.cc \
	download_list.h \
	file_list.cc \
	file_list.h \
	peer_info.cc \
	peer_info.h \
	peer_list.cc \
	peer_list.h \
	root.cc \
	root.h \
	tracker_list.cc \
	tracker_list.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
