noinst_LIBRARIES = libsub_ui.a

libsub_ui_a_SOURCES = \
	base_element.h \
	control.h \
	download.cc \
	download.h \
	download_list.cc \
	download_list.h \
	element_download_list.cc \
	element_download_list.h \
	element_file_list.cc \
	element_file_list.h \
	element_log_complete.cc \
	element_log_complete.h \
	element_peer_info.cc \
	element_peer_info.h \
	element_peer_list.cc \
	element_peer_list.h \
	element_string_list.cc \
	element_string_list.h \
	element_tracker_list.cc \
	element_tracker_list.h \
	root.cc \
	root.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
