noinst_LIBRARIES = libsub_ui.a

libsub_ui_a_SOURCES = \
	download.cc \
	download.h \
	download_list.cc \
	download_list.h \
	element_base.h \
	element_base.cc \
	element_chunks_seen.cc \
	element_chunks_seen.h \
	element_download_list.cc \
	element_download_list.h \
	element_file_list.cc \
	element_file_list.h \
	element_log_complete.cc \
	element_log_complete.h \
	element_menu.cc \
	element_menu.h \
	element_peer_list.cc \
	element_peer_list.h \
	element_string_list.cc \
	element_string_list.h \
	element_text.cc \
	element_text.h \
	element_tracker_list.cc \
	element_tracker_list.h \
	element_transfer_list.cc \
	element_transfer_list.h \
	root.cc \
	root.h

AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
