noinst_LIBRARIES = libsub_utils.a

libsub_utils_a_SOURCES = \
	command_slot.cc \
	command_slot.h \
	command_variable.cc \
	command_variable.h \
	command_download_slot.cc \
	command_download_slot.h \
	directory.cc \
	directory.h \
	list_focus.h \
	lockfile.cc \
	lockfile.h \
	parse.cc \
	parse.h \
	socket_fd.cc \
	socket_fd.h \
	variable.cc \
	variable.h \
	variable_generic.cc \
	variable_generic.h \
	variable_map.cc \
	variable_map.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
